# ai-gtm-skill-library

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  generate_sample_brief.py  generate_sample_deck.py  install.py  pyproject.toml  skills-index.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md  topics.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  skill-request.md
.github/workflows/: validate-skills.yml
docs/: HOW-TO-USE.md
gtm-skills/: _TEMPLATE.md
gtm-skills/abm-playbook/: SKILL.md
gtm-skills/battle-scanner/: SKILL.md
gtm-skills/community-catalyst/: SKILL.md
gtm-skills/competitive-battlecard/: SKILL.md
gtm-skills/competitive-exec-brief/: SKILL.md
gtm-skills/demand-engine/: SKILL.md
gtm-skills/enablement-forge/: SKILL.md
gtm-skills/gtm-exec-plan/: SKILL.md
gtm-skills/launch-command/: SKILL.md
python_runtime/: .gitattributes  README.md  __init__.py  funnel.py  signals.py
revops-skills/: README.md  _TEMPLATE.md
samples/: README.md  funnel-analysis-walkthrough.md  gtm-plan-acme-insight-studio.docx  gtm-plan-acme-insight-studio.md  gtm-plan-acme-insight-studio.pptx  gtm-plan-m365-copilot-extensibility.docx  gtm-plan-m365-copilot-extensibility.md  gtm-plan-m365-copilot-extensibility.pptx  sample-use-cases.md  ~$gtm-plan-m365-copilot-extensibility.pptx
scripts/: generate_sample_brief.py  generate_sample_deck.py  generate_skills_index.py  install.py  render_sample_previews.py  requirements.txt  validate_skills.py
skills/revops/: README.md
tests/: __init__.py  test_funnel.py  test_signals.py
(+27 files in other folders)
